--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ figment = { version = "0.10", features = ["toml", "env"] }
 serde = { version = "1.0.152", features = ["derive"] }
 axum-server = "0.4.6"
 axum = "0.6.10"
+thiserror = "1.0.39"
