feat(database framwork)
* impletmen database framwork, the main trait is `DBEngine` and `KV`
    * DBEngine is database open and flush, this will be use to handler database backend.
    * KV is the table in database, this can get/insert/remove, this will be use to services.
* we set sample DBEngine implement in sqlite.rs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,8 @@ serde = { version = "1.0.152", features = ["derive"] }
 axum-server = "0.4.6"
 axum = "0.6.10"
 thiserror = "1.0.39"
+rusqlite ={ version="0.23.1", optional=true}
+
+[features]
+default = ["sqlite"]
+sqlite = ["rusqlite"]
