--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,9 @@ axum = "0.6.10"
 thiserror = "1.0.39"
 # matrix protocol struct
 ruma = { version = "0.4.0", features = ["client-api"] }
-rusqlite ={ version="0.23.1", optional=true}
+rusqlite ={ version="0.29.0", optional=true }
+parking_lot = "0.12"
+thread_local = "1.1.7"
 
 [features]
 default = ["sqlite"]
