--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ rusqlite ={ version="0.29.0", optional=true }
 parking_lot = "0.12"
 thread_local = "1.1.7"
 rand = "0.8.5"
+rust-argon2 = "1.0"
 
 [features]
 default = ["sqlite"]
