--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ parking_lot = "0.12"
 thread_local = "1.1.7"
 rand = "0.8.5"
 rust-argon2 = "1.0"
+bincode = "1.0"
 
 [features]
 default = ["sqlite"]
