feat(tracing implement loging)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,8 @@ tokio = { version = "1.25.0", features = ["full"] }
 figment = { version = "0.10", features = ["toml", "env", "test"] }
 serde = { version = "1.0.152", features = ["derive"] }
 axum-server = "0.4.6"
-axum = "0.6.10"
-thiserror = "1.0.39"
+axum = "0.6.12"
+thiserror = "1.0.40"
 # matrix protocol struct
 # ruma = { version = "0.4.0", features = ["client-api"] }
 rusqlite ={ version="0.29.0", optional=true }
@@ -20,6 +20,10 @@ thread_local = "1.1.7"
 rand = "0.8.5"
 rust-argon2 = "1.0"
 bincode = "1.0"
+tracing = "0.1"
+tracing-subscriber = { version = "0.3"}
+tower-http = {version="0.4.0", features=["trace"]}
+tower = { version = "0.4.8", features = ["util"] }
 
 [features]
 default = ["sqlite"]
