--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ axum = "0.6.12"
 thiserror = "1.0.40"
 # matrix protocol struct
 # ruma = { version = "0.4.0", features = ["client-api"] }
-rusqlite ={ version="0.29.0", optional=true }
+rusqlite ={ version="0.29.0", optional=true, features = ["bundled"] }
 parking_lot = "0.12"
 thread_local = "1.1.7"
 rand = "0.8.5"
